# desktop-templates-sdk

./: .gitignore
template/: pyproject.toml
template/desktop/: __init__.py  build_dev.py  build_prod.py  template.py
